# orchid-python-api

./: .gitignore  LICENSE  Pipfile  README-dev.md  README-pythonnet3-low.md  README-pythonnet3.md  README.md  ReleaseNotes.md  copy_examples.sh  copy_orchid_examples.py  copy_orchid_low_level_examples.py  copy_orchid_manual_examples.py  copy_orchid_tutorials.py  demo.ipynb  examples.py  jupyter_demo.ipynb  op_equality_change.py  orchid_copy_examples.py  orchid_use_installed_test_data.py  plot_monitor_pressures.py  plot_pressures.py  plot_trajectories.py  plot_trajectory.py  plot_treatment.py  pyproject.toml  python_api.yaml  python_api.yaml.example  requirements.txt  run_script_examples.py  scratch.ipynb  sentinel.py  setup.py  tasks.py  use_installed_test_data.sh  use_orchid_test_data.py
benchmark_tests/: test_optimized_but_possibly_unsafe_save.py  test_save_project.py
docs/: conf.py  index.rst  readme_dev_link.rst
docs_dev/: README.md  generate-uml.sh  layer-classes.puml  layer-collaboration.puml  layer-structure.puml  orchid-assy-dependencies.puml
examples/: completion_analysis.ipynb  fiber_data_example.py  plot_monitor_curves.ipynb  plot_monitor_pressures.py  plot_trajectories.ipynb  plot_treatment.ipynb
features/: data_frames.feature  environment.py  low_level_api.feature  low_level_scripts.feature  monitor.feature  project.feature  searchable_domain_objects.feature  stage.feature  stage_parts.feature  stage_qc.feature  trajectory.feature  treatment.feature  treatment_curves.feature  well.feature
image_frac/: __init__.py  core.py  project_adapter.py  project_loader.py  trajectory_coordinator.py
orchid/: VERSION  __init__.py  __version__.py  base.py  base_curve_adapter.py  base_time_series_adapter.py  configuration.py  convert.py  core.py  dom_project_object.py  dom_project_objects.py  dom_searchable_project_objects.py  dot_net.py  dot_net_displosable.py  dot_net_disposable.py  dot_net_dom_access.py  measurement.py  native_data_frame_adapter.py  native_fiber_data.py  native_fiber_data_set_info.py  native_monitor_adapter.py  native_monitor_curve_adapter.py  net_date_time.py  (+50 more)
(+163 files in other folders)
