[tool.poetry]
name = "orchid"
version = "2020.4.0-beta"
description = "Define the Python API for Orchid*. (*Orchid is a mark of Reveal Energy Services, Inc.)"
authors = ["Reveal Energy Services, Inc. <support@reveal-energy.com>"]
maintainers = ["Reveal Energy Services, Inc. <support@reveal-energy.com>"]
# License details?
license="Proprietary"
readme = "README.md"
# Zendesk portal? Beta registration? Main web site?
homepage=""
# Github? Azure repository?
repository=""
# Zendesk portal?
documentation=""
# Other keywords?
keywords=["Orchid",
          "Fracture Diagnostics"]
# Other classifiers? Other ideas? Removals?
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    # 'License :: OSI Approved :: MIT License',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
]
# Perhaps these includes need be in an examples/samples subdirectory?
include=["*.ipynb"]
exclude=[".gitignore",
         "scratch.ipynb"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
plot_trajectories = "plot_trajectories:main"
plot_monitor_pressures = "plot_monitor_pressures:main"
plot_treatment = "plot_treatment:main"

[tool.poetry.urls]
# Zendesk?
"Issues" = ""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
